--- a/sss.html
+++ b/sss.html
@@ -1,100 +1,96 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>محمد جواد پرویزی - جوان‌ترین خیر مدرسه‌ساز</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>محمد جواد پرویزی</title>
   <style>
     body {
-      font-family: "Tahoma", sans-serif;
-      background: #f8f9fa;
-    }
-    .hero {
-      background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url('https://picsum.photos/1200/600?random=1');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 100px 20px;
+      font-family: tahoma, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+      line-height: 1.8;
       text-align: center;
     }
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: bold;
-    }
-    .section {
+    header {
+      background: linear-gradient(135deg, #00b4d8, #0077b6);
+      color: white;
       padding: 60px 20px;
     }
-    .card {
-      border-radius: 1rem;
+    header h1 {
+      font-size: 2.5rem;
+      margin: 0;
+    }
+    header p {
+      font-size: 1.2rem;
+    }
+    section {
+      max-width: 900px;
+      margin: 40px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+    h2 {
+      color: #0077b6;
+      margin-bottom: 20px;
+    }
+    footer {
+      background: #0077b6;
+      color: white;
+      padding: 15px;
+      margin-top: 40px;
+    }
+    a {
+      color: #0077b6;
+      text-decoration: none;
+    }
+    a:hover {
+      text-decoration: underline;
+    }
+    .btn {
+      display: inline-block;
+      background: #00b4d8;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 8px;
+      margin-top: 20px;
+      transition: background 0.3s;
+    }
+    .btn:hover {
+      background: #0096c7;
     }
   </style>
 </head>
 <body>
-
-  <!-- Hero -->
-  <section class="hero">
+  <header>
     <h1>محمد جواد پرویزی</h1>
-    <p class="lead">جوان‌ترین خیر مدرسه‌ساز و فعال خیریه</p>
+    <p>جوان‌ترین خیر مدرسه‌ساز و فعال اجتماعی</p>
+  </header>
+
+  <section>
+    <h2>درباره من</h2>
+    <p>
+      من محمد جواد پرویزی هستم؛ جوانی که با عشق و انگیزه در مسیر کارهای خیرخواهانه قدم گذاشته‌ام.
+      یکی از اهداف من، ساخت مدارس برای کودکان نیازمند و حمایت از فعالیت‌های خیریه است.
+    </p>
+    <a href="tel:09131181021" class="btn">تماس با من</a>
   </section>
 
-  <!-- About -->
-  <section class="section container">
-    <div class="row align-items-center">
-      <div class="col-md-6">
-        <img src="https://picsum.photos/500/400?random=2" class="img-fluid rounded shadow" alt="خیریه">
-      </div>
-      <div class="col-md-6">
-        <h2 class="mb-3">درباره من</h2>
-        <p>
-          من <strong>محمد جواد پرویزی</strong> هستم؛ جوان‌ترین خیر مدرسه‌ساز کشور. با ایمان قلبی و اعتقاد به کمک به همنوع، توانسته‌ام در زمینه ساخت مدارس و فعالیت‌های خیریه قدم‌های مؤثری بردارم.
-        </p>
-        <p>
-          اعتقاد دارم که آموزش، کلید پیشرفت جامعه است و ساخت مدرسه یعنی ساختن آینده‌ای روشن برای فرزندان این سرزمین. به همین دلیل همواره سعی کرده‌ام بخشی از زندگی و توان مالی خود را وقف این کار ارزشمند کنم.
-        </p>
-      </div>
-    </div>
+  <section>
+    <h2>فعالیت‌ها</h2>
+    <ul>
+      <li>ساخت مدارس در مناطق محروم</li>
+      <li>حمایت از دانش‌آموزان بی‌بضاعت</li>
+      <li>فعالیت‌های خیریه اجتماعی و فرهنگی</li>
+    </ul>
   </section>
 
-  <!-- Activities -->
-  <section class="section bg-light">
-    <div class="container">
-      <h2 class="text-center mb-5">فعالیت‌های من</h2>
-      <div class="row g-4">
-        <div class="col-md-4">
-          <div class="card p-3 h-100">
-            <h4 class="mb-3">مدرسه‌سازی</h4>
-            <p>ساخت و تجهیز مدارس در مناطق محروم به منظور فراهم کردن محیطی امن و سالم برای تحصیل دانش‌آموزان.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-3 h-100">
-            <h4 class="mb-3">حمایت از نیازمندان</h4>
-            <p>ارائه کمک‌های معیشتی و آموزشی به خانواده‌های کم‌بضاعت و یتیمان.</p>
-          </div>
-        </div>
-        <div class="col-md-4">
-          <div class="card p-3 h-100">
-            <h4 class="mb-3">فعالیت‌های مذهبی</h4>
-            <p>برگزاری مراسم مذهبی و فرهنگی به منظور تقویت معنویت و انسجام اجتماعی.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <!-- Contact -->
-  <section class="section container text-center">
-    <h2 class="mb-4">ارتباط با من</h2>
-    <p>برای همکاری یا فعالیت‌های خیرخواهانه می‌توانید از طریق شماره زیر با من در ارتباط باشید:</p>
-    <h3 class="text-primary">📞 ۰۹۱۳۱۱۸۱۰۲۱</h3>
-  </section>
-
-  <!-- Footer -->
-  <footer class="bg-dark text-white text-center p-3">
-    <p>© ۲۰۲۵ محمد جواد پرویزی | جوان‌ترین خیر مدرسه‌ساز</p>
+  <footer>
+    <p>ساخته شده با ❤️ توسط محمد جواد پرویزی</p>
   </footer>
-
 </body>
 </html>
