--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       color: #333;
       line-height: 1.8;
       text-align: center;
+      direction: rtl;
     }
     header {
       background: linear-gradient(135deg, #00b4d8, #0077b6);
@@ -33,10 +34,12 @@
       background: white;
       border-radius: 12px;
       box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+      text-align: justify;
     }
     h2 {
       color: #0077b6;
       margin-bottom: 20px;
+      text-align: center;
     }
     footer {
       background: #0077b6;
@@ -68,29 +71,43 @@
 <body>
   <header>
     <h1>محمد جواد پرویزی</h1>
-    <p>جوان‌ترین خیر مدرسه‌ساز و فعال اجتماعی</p>
+    <p>فعال اجتماعی، خیر مدرسه‌ساز و خدمتگزار فرهنگ دینی</p>
   </header>
 
   <section>
-    <h2>درباره من</h2>
+    <h2>درباره او</h2>
     <p>
-      من محمد جواد پرویزی هستم؛ جوانی که با عشق و انگیزه در مسیر کارهای خیرخواهانه قدم گذاشته‌ام.
-      یکی از اهداف من، ساخت مدارس برای کودکان نیازمند و حمایت از فعالیت‌های خیریه است.
+      محمد جواد پرویزی جوانی است که فعالیت‌های گسترده‌ای در زمینه‌های خیریه و اجتماعی دارد.
+      او با تکیه بر باورهای دینی و علاقه به خدمت به مردم، در سال‌های اخیر پروژه‌های مختلفی را در حوزه آموزش، مذهب و امور فرهنگی آغاز کرده است.
     </p>
-    <a href="tel:09131181021" class="btn">تماس با من</a>
   </section>
 
   <section>
-    <h2>فعالیت‌ها</h2>
-    <ul>
-      <li>ساخت مدارس در مناطق محروم</li>
-      <li>حمایت از دانش‌آموزان بی‌بضاعت</li>
-      <li>فعالیت‌های خیریه اجتماعی و فرهنگی</li>
-    </ul>
+    <h2>مدرسه‌سازی</h2>
+    <p>
+      یکی از اقدامات مهم او، ساخت مدارس در مناطق محروم بوده است. 
+      از جمله این پروژه‌ها می‌توان به احداث مدرسه‌ای در روستای دومک زاهدان اشاره کرد؛ 
+      مکانی که کودکان نیازمند امروز با امید به فردایی روشن در آن به تحصیل مشغول‌اند.
+    </p>
+  </section>
+
+  <section>
+    <h2>فعالیت‌های مذهبی</h2>
+    <p>
+      محمد جواد پرویزی همچنین در حوزه برگزاری مراسم مذهبی و ایجاد پایگاه‌های فرهنگی نقش پررنگی داشته است.
+      او با تأسیس و پشتیبانی از هیات مذهبی برای امام حسین علیه‌السلام و نیز مشارکت در ساخت و آبادانی مساجد،
+      تلاش کرده است تا فضایی معنوی و پرنشاط برای جامعه فراهم سازد.
+    </p>
+  </section>
+
+  <section>
+    <h2>ارتباط</h2>
+    <p>برای ارتباط و همراهی در این مسیر خیرخواهانه، می‌توانید از طریق شماره زیر تماس بگیرید:</p>
+    <a href="tel:09131181021" class="btn">تماس با او</a>
   </section>
 
   <footer>
-    <p>ساخته شده با ❤️ توسط محمد جواد پرویزی</p>
+    <p>این وبسایت جهت معرفی فعالیت‌های فرهنگی و اجتماعی محمد جواد پرویزی طراحی شده است.</p>
   </footer>
 </body>
 </html>
